# numpy-workshop

./: NOTICE  README.md  pyproject.toml  requirements.txt
assets/binaries/: binary_2.npz
assets/images/numpy/: ATTRIBUTION.md
assets/txtfiles/: file_2.csv
code/: 01-array-basics.ipynb  02-arithmetic-operations.ipynb  02-element-wise-operators.ipynb  03-comparative-operations.ipynb  04-axes.ipynb  04-index-&-slice.ipynb  05-axes.ipynb  06-array-manipulations.ipynb  07-array-creation.ipynb  07-ndarray-members.ipynb  08-array-creation.ipynb  09-mathematics.ipynb  10-sort-search-count.ipynb  10-statistics.ipynb  11-sort-search-count.ipynb  12-logic.ipynb  12-set.ipynb  13-linear-algebra.ipynb  13-set.ipynb  14-linear-algebra.ipynb  14-structured-array.ipynb  15-structured-array.ipynb  16-input-output.ipynb  16-random-generator.ipynb  17-fourier-transform.ipynb  17-random-generator.ipynb  18-efficient-computing.ipynb  18-fourier-transform.ipynb  19-efficient-computing.ipynb  19-miscellaneous.ipynb  20-miscellaneous.ipynb  21-looking-ahead.ipynb
codes/: 00_array.ipynb  01-array-basics.ipynb  01_arithmetic-operations.ipynb  01_array-basics.ipynb  02-arithmetic-operations.ipynb  02_arithmetic-operations.ipynb  02_comparative-operations.ipynb  03-comparative-operations.ipynb  03_comparative-operations.ipynb  03_index-&-slice.ipynb  04-index-&-slice.ipynb  04_axes.ipynb  04_index-&-slice.ipynb  05-axes.ipynb  05_array-modifications.ipynb  05_axes.ipynb  05_modifications.ipynb  06-array-manipulations.ipynb  06_array-manipulations.ipynb  06_ndarray-members.ipynb  06_ndarray.ipynb  07-ndarray-members.ipynb  07_array-creation.ipynb  07_ndarray-members.ipynb  08_array-creation.ipynb  08_mathematics.ipynb  09-mathematics.ipynb  09_mathematics.ipynb  09_statistics.ipynb  10-statistics.ipynb  10_sort-search-count.ipynb  10_statistics.ipynb  11-sort-search-count.ipynb  11_logic.ipynb  11_sort-search-count.ipynb  12-logic.ipynb  12_logic.ipynb  12_set.ipynb  13-set.ipynb  13_linear-algebra.ipynb  (+21 more)
resources/binaries/: binary_3.npz
resources/txtfiles/: file_1.csv
