[project]
name = "numpy-workshop"
version = "0.1.0"
authors = [
    {name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com"}
]
maintainers = [
    {name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com"}
]
description = "An in-depth guide to mastering NumPy, covering fundamental to advanced array operations for data science and numerical computing"
keywords = ["NumPy", "data science", "numerical computing", "linear algebra", "arrays", "Python"]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13.7"
dependencies = [
    "numpy>=2.3.2,<3.0.0",
]

[project.optional-dependencies]
complete = [
    "matplotlib>=3.10.6,<4.0.0",
    "pandas>=2.3.2,<3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1,<7.0.0",
    # "ipywidgets>=8.1.7,<9.0.0",
]

[project.urls]
Repository = "https://github.com/mr-pylin/numpy-workshop"
"MyHomepage" = "https://mr-pylin.github.io"

[tool.black]
line-length = 120
